Release 1.21.0 (#155)
* Release 1.21.0

* ApphubCI - Return from *Services menu if input is empty

* AdminPanel - PerformanceReporting - Client does not throw exception when connection to AdminPanel failed

* Calendar - Back button on edit event/occurrence screen actually goes back, not only to index page

* EliteBase - StationEconomy is not saved with random stationId in case of already existing station

* EliteBase - Limit size of searchResult to 10

* EliteBase - Commodity and Star name query optimization

* EliteBase - Execution order for OrphanedRecordCleaners

* EliteBase - OrphanedRecordCleaner rework

* Calendar - Close opened occurrence when status set to Done or reminder confirmed

* Calendar - Automatically refresh index page when getting focus

* Calendar - Automatically switch to new date when day is over

* Calendar - Display labels of opened event

* Notebook - Align table's content to top

* Notebook - Expand text column on demand

* EliteBase - Run WriteBuffers before DeleteBuffers to avoid updating deleted data

* Notebook - Select default ListItem that loads automatically when opening Notebook

* Platform - Random delay of calls simulating slow environment

* Calendar - Nowraps and wraps

* SkyXplore - Cannot terraform or build ConstructionArea or BuildingModule while leftover resources are present

* Platform - Depededncy update

* Java 25

* Calendar - Filter for no label events

* Calendar - Redirect back when editing event

* Calendar - Create occurrence on selected date

* Release Preparation